--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "prettier-plugin-astro": "^0.8.0"
   },
   "dependencies": {
+    "@contentful/rich-text-html-renderer": "^16.0.3",
+    "contentful": "^9.3.5",
     "cypress": "^10.0.3"
   }
 }
